--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
     "description": "AHossainJim_portfolio",
     "main": "index.js",
     "scripts": {
-    "sass": "sass --watch./SASS/main.scss:./CSS/stylesheet.css --style compressed"
+        "sass": "sass --watch./SASS/main.scss:./CSS/stylesheet.css --style compressed"
     },
     "author": "AHossainJim",
-    "license": "ISC"
-  }
-  
+    "license": "ISC",
+    "dependencies": {
+        "sass": "^1.32.4"
+    }
+}
