--- a/package.json
+++ b/package.json
@@ -4,11 +4,12 @@
     "description": "AHossainJim_portfolio",
     "main": "index.js",
     "scripts": {
-        "sass": "sass --watch./SASS/main.scss:./CSS/stylesheet.css --style compressed"
+        "sass": "sass --watch ./SASS/main.scss:./CSS/style.css --style compressed",
+        "prefix": "postcss ./CSS/style.css --use autoprefixer -d ./CSS/prefixed/"
     },
     "author": "AHossainJim",
     "license": "ISC",
     "dependencies": {
-        "sass": "^1.32.8"
+        "sass": "^1.32.12"
     }
 }
